# orderbook-simulator

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.hypothesis/examples/b7e8567d6e70cd5f/: 329ca1b0fd17d42d
bench/: benchmark.py
docs/: ARCHITECTURE.md  PDT_ALIGNMENT.md  README.md  RESULTS.md  RUNBOOK.md
notebooks/: OrderBook_Interactive_Report.ipynb  OrderBook_Simulator_Report.ipynb
orderbook/: __init__.py  cli.py  core.py  metrics.py  models.py  sim.py  viz.py
tests/: test_core_unit.py  test_metrics.py  test_properties.py
