[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orderbook-simulator"
version = "0.1.0"
description = "Order Book Simulator — Price-Time Priority Matching Engine (Sohan Shingade)"
readme = "docs/README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Sohan Shingade"}]
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "matplotlib==3.8.4",
]

[project.optional-dependencies]
dev = [
  "pytest==8.0.2",
  "hypothesis==6.98.16",
  "mypy==1.10.0",
  "ruff==0.5.6",
  "black==24.4.2",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = []
exclude = ["results", ".venv"]

[tool.setuptools.packages.find]
where = ["."]
include = ["orderbook*"]
exclude = ["tests*", "docs*", "bench*", "results*"]
